--- a/debian/changelog
+++ b/debian/changelog
@@ -13,7 +13,7 @@ ledgersmb (1.4.29+ds-0~1) UNRELEASED; urgency=medium
     - Added to Suggests: libx12-parser-perl.
     - Added to Depends: libjs-dojo-dojox, libjson-xs-perl | libjson-perl,
       libmoose-perl, libnumber-format-perl,libnamespace-autoclean-perl,
-      libcarp-always-perl, starman.
+      libcarp-always-perl, starman, adduser.
     - Drop dh-linktree,libjs-prototype,libjs-scriptaculous from Build-Depends.
     - Drop libio-stringy-perl & libhtml-parser-perl from Depends.
     - Minor edit to long description, pointing to README.Debian.
@@ -25,16 +25,23 @@ ledgersmb (1.4.29+ds-0~1) UNRELEASED; urgency=medium
     - Remove the separate locale/po/*.po stanzas as no longer needed because they are now
       being refreshed with each upstream release.
   * Changes in debian/rules:
+   - Add override for dh_auto_build.
+   - Make override_dh_auto_configure a bare target.
    - Correct permissions of tools/*.psgi in override_dh_fixperms stanza.
    - Correct permissions of lsmb-request.pl in override_dh_fixperms stanza.
-   - Correct permissions of UR/Reports/*.html in override_dh_fixperms stanza.
+   - Correct permissions of *.html files as necessary in override_dh_fixperms stanza.
+   - Remove ownership changing for /var/lib/ledgersmb in override_dh_fixperms stanza.
   * Changes in debian/ledgersmb.postinst:
    - Change where ledgersmb.conf is enabled for apache 2.4.
    - Remove no longer needed references to /var/lib/ledgersmb.
+  * Changes in debian/ledgersmb.preinst:
+   - Remove unnecessary v1.3.18-1 related stanza.
+   - Add 'ledgersmb' system user as necessary.
+  * Changes in debian/ledgersmb.postrm:
+   - Purge 'ledgersmb' system user and group as necessary.
   * Changes in debian/ledgersmb.lintian-overrides:
    - Add entry for Lintian warning 'manpage-has-bad-whatis'.
    - Add entry for experimental Lintian result 'duplicate-files'.
-  * Remove unnecessary v1.3.18-1 related stanza from debian/ledgersmb.preinst.
   * Remove debian/source.lintian-overrides as it is no longer necessary.
   * Update debian/README.Debian to reflect package changes for LedgerSMB v1.4.
   * Rewrite debian/README.source regarding repacking the 'orig' source archive.
@@ -44,7 +51,7 @@ ledgersmb (1.4.29+ds-0~1) UNRELEASED; urgency=medium
   * Add debian/upstream/signing-key.asc for upstream gpg release signing key.
   * Add pgpsigurlmangle, dversionmangle, & repacksuffix options to debian/watch.
 
- -- Robert James Clay <jame@rocasa.us>  Fri, 27 May 2016 09:31:22 -0400
+ -- Robert James Clay <jame@rocasa.us>  Fri, 27 May 2016 13:50:36 -0400
 
 ledgersmb (1.3.47-1) unstable; urgency=medium
 
