--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.4.30+ds-1~bpo8+1~1) jessie-backports; urgency=medium
+
+  * Rebuild for jessie-backports.
+
+ -- Robert James Clay <jame@rocasa.us>  Sun, 24 Jul 2016 09:48:09 -0400
+
 ledgersmb (1.4.30+ds-1) unstable; urgency=medium
 
   * New upstream release.
