--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ledgersmb (1.4.30+ds-1~bpo8+1~1) jessie-backports; urgency=medium
+ledgersmb (1.4.30+ds-1~bpo8+1) jessie-backports; urgency=medium
 
   * Rebuild for jessie-backports.
 
- -- Robert James Clay <jame@rocasa.us>  Sun, 24 Jul 2016 09:48:09 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sun, 24 Jul 2016 20:42:18 -0400
 
 ledgersmb (1.4.30+ds-1) unstable; urgency=medium
 
