--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,13 @@ Changelog for 1.3 Series
 Initial Release:  Monday, Oct 12 2011
 Supported Presently
 
+Changelog for 1.3.48
+* Adding current directory explicitly to include path for Debian (Chris T and
+Erik H)
+
+Chris T is Chris Travers
+Erik H is Erik Huelsmann
+
 Changelog for 1.3.47
 * Fixed bug 1271, default payment account not set on 2nd line (Chris T)
 * Fixed bug 1275, post error due to trying to double encode arry (Chris T)
