--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,19 @@
 Changelog for 1.4 Series
 Released 2014-09-15
 
+Changelog for 1.4.31
+* Fixed user with contact all privileges can't create contacts (Chris T #1219)
+* Fixed new user with manage users can't see employee (Chris T #1841)
+* Fixed Can't upload html templates (Chris T, #1179)
+* Fixed can't log into companies with & in their names (Chris T, #1004)
+* Added NZ chart of accounts (Kiwi)
+* Fixed can't create checkpoints before transactions (Chris T, #1704)
+* Fixed contact_all insufficient to create contacts (Chris T, #1219)
+* Fixed internal server errors on debian following upgrade (Chris T and Erik H)
+
+Chris T is Chris Travers
+Erik H is Erik Huelsmann
+
 Changelog for 1.4.30
 * Fix payment reversal of foreign-currency invoices (Erik H, #1716)
 * No longer default the temporary directory to /tmp/ledgersmb (Erik H)
