--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.4.31+ds-0~1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Robert James Clay <jame@rocasa.us>  Sat, 30 Jul 2016 22:26:04 -0400
+
 ledgersmb (1.4.30+ds-1) unstable; urgency=medium
 
   * New upstream release.
