--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ledgersmb (1.4.31+ds-0~1) UNRELEASED; urgency=medium
+ledgersmb (1.4.31+ds-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 30 Jul 2016 22:26:04 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat, 30 Jul 2016 23:11:08 -0400
 
 ledgersmb (1.4.30+ds-1) unstable; urgency=medium
 
