--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
-ledgersmb (1.4.32+ds-0~1) UNRELEASED; urgency=medium
+ledgersmb (1.4.32+ds-1) unstable; urgency=medium
 
   * New Upstream Release.
+  * Changes in debian/control:
+    - Remove 'Replaces: ledgersmb' from the binary stanza as it is no longer
+      necessary.
+    - Change the package Priority from 'optional' to 'extra' to comply with
+      policy section 2.5.
 
- -- Robert James Clay <jame@rocasa.us>  Mon, 08 Aug 2016 10:52:56 -0400
+ -- Robert James Clay <jame@rocasa.us>  Mon, 08 Aug 2016 13:01:00 -0400
 
 ledgersmb (1.4.31+ds-1) unstable; urgency=medium
 
