--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ledgersmb (1.4.33+ds-0~1) UNRELEASED; urgency=medium
+ledgersmb (1.4.33+ds-1) unstable; urgency=medium
 
   * New Upstream Release
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 20 Aug 2016 11:47:52 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat, 20 Aug 2016 12:40:38 -0400
 
 ledgersmb (1.4.32+ds-1) unstable; urgency=medium
 
