--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.4.33+ds-1) unstable; urgency=medium
+
+  * New Upstream Release
+
+ -- Robert James Clay <jame@rocasa.us>  Sat, 20 Aug 2016 12:40:38 -0400
+
 ledgersmb (1.4.32+ds-1) unstable; urgency=medium
 
   * New Upstream Release.
