--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.4.33+ds-1~bpo8+1) jessie-backports; urgency=medium
+
+  * Rebuild for jessie-backports.
+
+ -- Robert James Clay <jame@rocasa.us>  Fri, 26 Aug 2016 12:04:28 -0400
+
 ledgersmb (1.4.33+ds-1) unstable; urgency=medium
 
   * New Upstream Release
@@ -20,6 +26,12 @@ ledgersmb (1.4.31+ds-1) unstable; urgency=medium
   * New upstream release.
 
  -- Robert James Clay <jame@rocasa.us>  Sat, 30 Jul 2016 23:11:08 -0400
+
+ledgersmb (1.4.30+ds-1~bpo8+1) jessie-backports; urgency=medium
+
+  * Rebuild for jessie-backports.
+
+ -- Robert James Clay <jame@rocasa.us>  Sun, 24 Jul 2016 20:42:18 -0400
 
 ledgersmb (1.4.30+ds-1) unstable; urgency=medium
 
