--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.4.33+ds-2) UNRELEASED; urgency=medium
+
+  * Remove 'libmodule-install-perl' from in Build-Depends of debian/control.
+
+ -- Robert James Clay <jame@rocasa.us>  Sun, 04 Sep 2016 16:58:07 -0400
+
 ledgersmb (1.4.33+ds-1) unstable; urgency=medium
 
   * New Upstream Release
