--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.4.34+ds-2~0) UNRELEASED; urgency=medium
+
+  * Move libjson-xs-perl from 'Depends' to 'Recommends' in debian/control.
+
+ -- Robert James Clay <jame@rocasa.us>  Fri, 04 Nov 2016 22:01:53 -0400
+
 ledgersmb (1.4.34+ds-1) unstable; urgency=medium
 
   * Remove 'libmodule-install-perl' from 'Build-Depends' in debian/control.
