--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ledgersmb (1.4.35+ds-0~1) UNRELEASED; urgency=medium
+
+  * New Upstream Release
+  * Make correction to debian/changelog entry for v1.4.34+ds-1, adding that it
+    was for a new upstream release.
+
+ -- Robert James Clay <jame@rocasa.us>  Tue, 22 Nov 2016 19:13:54 -0500
+
 ledgersmb (1.4.34+ds-2) unstable; urgency=medium
 
   * Move libjson-xs-perl from 'Depends' to 'Recommends' in debian/control.
@@ -6,6 +14,7 @@ ledgersmb (1.4.34+ds-2) unstable; urgency=medium
 
 ledgersmb (1.4.34+ds-1) unstable; urgency=medium
 
+  * New Upstream Release
   * Remove 'libmodule-install-perl' from 'Build-Depends' in debian/control.
 
  -- Robert James Clay <jame@rocasa.us>  Sat, 29 Oct 2016 13:50:23 -0400
