--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,12 @@
 ledgersmb (1.4.37+ds-0~1) UNRELEASED; urgency=medium
 
   * New Upstream Release
-  * Add note regarding experimental use of 'starman' to debian/README.Debian.
+  * Add installation of a apache-vhost.conf file.
+  * Add installation of a starman-ledgersmb.service file.
   * Make correction to debian/changelog entry for v1.4.34+ds-1, adding that it
     was for a new upstream release.
 
- -- Robert James Clay <jame@rocasa.us>  Thu, 12 Jan 2017 07:35:25 -0500
+ -- Robert James Clay <jame@rocasa.us>  Sun, 15 Jan 2017 17:00:47 -0500
 
 ledgersmb (1.4.34+ds-2) unstable; urgency=medium
 
